<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="edge_tap_navigation_enabled"
            app:summary="@string/edge_tap_navigation_enabled_description"
            app:title="@string/edge_tap_navigation_enable_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/video_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="double_tap_to_seek_enabled"
            app:summary="@string/double_tap_to_seek_enabled_description"
            app:title="@string/double_tap_to_seek_enabled_title" />

        <SeekBarPreference
            android:max="30"
            app:defaultValue="10"
            app:dependency="double_tap_to_seek_enabled"
            app:iconSpaceReserved="false"
            app:key="double_tap_to_seek_seconds"
            app:min="5"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:summary="@string/double_tap_to_seek_seconds_description"
            app:title="@string/double_tap_to_seek_seconds_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="hide_native_seek_buttons"
            app:summary="@string/hide_native_seek_buttons_description"
            app:title="@string/hide_native_seek_buttons_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="remember_video_playback_position_enabled"
            app:summary="@string/remember_video_playback_position_enabled_description"
            app:title="@string/remember_video_playback_position_enabled_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="long_press_speed_enabled"
            app:summary="@string/long_press_speed_enabled_description"
            app:title="@string/long_press_speed_enabled_title" />

        <ListPreference
            app:defaultValue="2.0"
            app:dependency="long_press_speed_enabled"
            app:entries="@array/long_press_speed_entries"
            app:entryValues="@array/long_press_speed_values"
            app:iconSpaceReserved="false"
            app:key="long_press_speed"
            app:summary="@string/long_press_speed_description"
            app:title="@string/long_press_speed_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/editing_header">

        <ListPreference
            app:defaultValue="ask"
            app:entries="@array/edit_save_behavior_entries"
            app:entryValues="@array/edit_save_behavior_values"
            app:iconSpaceReserved="false"
            app:key="edit_save_behavior"
            app:summary="@string/edit_save_behavior_description"
            app:title="@string/edit_save_behavior_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/smart_album_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="smart_album_enabled"
            app:summary="@string/smart_album_enabled_desc"
            app:title="@string/smart_album_enabled_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="smart_album_manage_rules"
            app:summary="@string/smart_album_manage_desc"
            app:title="@string/smart_album_manage_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="smart_album_import"
            app:summary="@string/smart_album_import_desc"
            app:title="@string/smart_album_import_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="smart_album_export"
            app:summary="@string/smart_album_export_desc"
            app:title="@string/smart_album_export_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="smart_album_reset"
            app:summary="@string/smart_album_reset_desc"
            app:title="@string/smart_album_reset_title" />

        <SeekBarPreference
            android:max="200"
            app:defaultValue="60"
            app:iconSpaceReserved="false"
            app:key="smart_album_exif_scan_limit"
            app:min="10"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true"
            app:summary="@string/smart_album_exif_limit_desc"
            app:title="@string/smart_album_exif_limit_title" />

    </PreferenceCategory>

</PreferenceScreen>
